# nixpkgs-stats

./: .env.example  .gitignore  LICENSE  README.md  chart_data.js  flake.nix  index.html  main.py  query.graphql
data/: .gitattributes  raw_2020-12.json  state.json
src/: main.rs
tools/genchart-py/: files.py  main.py  process_files.py
tools/nixpkgs-stats/: Cargo.toml
tools/nixpkgs-stats/src/: data_state.rs  query.graphql
