[package]
name = "nixpkgs-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
dotenvy = "0.15"
graphql_client = "0.13"
reqwest = { version = "0.11", default_features = false, features = ["gzip", "brotli", "deflate", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
